--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@ html, body {
 #app, #map, #mapUI {
   width: inherit;
   height: inherit;
+  background-color: #000;
 }
 .filterSubwayLines {
   position: absolute;
